--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "autoprefixer": "^10.4.21",
     "framer-motion": "^12.23.24",
+    "gtag": "^1.0.1",
     "next": "15.5.4",
     "postcss": "^8.5.6",
     "react": "19.1.0",
